k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinatra-service
spec:
  type: LoadBalancer
  selector:
    app: sinatra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4567
